--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@types/echarts": "0.0.13",
     "core-js": "^2.4.1",
     "ngx-echarts": "^2.1.1",
     "rxjs": "^5.5.2",
